design fix: title higher on mobile

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -415,7 +415,7 @@ h1 {
 
 @media screen and (max-width: 600px) {
   .TitleMiddle {
-    top: 40vh;
+    top: 30vh;
     font-size: 32px;
   }
   .TitleTop {
